Fix heading spacing

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ a {
 }
 
 .heading {
-  padding-top: 30px;
   margin-bottom:60px;
   display: block;
   position: relative;
